--- a/css/style.css
+++ b/css/style.css
@@ -49,7 +49,7 @@ body {
   z-index: 1;
 }
 .at-slider {
-  width: 100%;
+  width: 90%;
   height: 100%;
   display: flex;
   align-items: center;
@@ -61,7 +61,7 @@ body {
   background-position: top;
 }
 .slick-next,
-.slick-arrow {
+.slick-prew {
   display: none;
 }
 .slider-item-1 {
