--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Acme", sans-serif;
+  overflow-x: hidden;
 }
 
 /* width */
@@ -110,8 +111,8 @@ body {
   align-items: center;
 }
 .slider-item {
-  width: 80vw;
-  height: 80vh;
+  width: 90vw;
+  height: 90vh;
   background-size: cover;
   background-position: top;
 }
@@ -119,19 +120,42 @@ body {
 .slick-prew {
   display: none;
 }
-.slider-item-1 {
-  background-image: url(../img/fpage-bg-img/TaIeS2.jpg);
+.slide-img {
+  width: 100%;
+  height: 100%;
 }
-.slider-item-2 {
-  background-image: url(../img/fpage-bg-img/1096896.jpg);
+.slider-for{
+  width: 100%;
+  height: 70%;
 }
-.slider-item-3 {
-  background-image: url(../img/fpage-bg-img/valhalla-assassin-s-creed.jpg);
+.slider-nav{
+  width: 100%;
+  height: 30%;
 }
-.slider-item-4 {
-  background-image: url(../img/fpage-bg-img//RedDeadRedemption2.jpg);
+.slider-nav-item img{
+  width: 100%;
+  height: 100%;
 }
+.slick-dots {
+  bottom: 5px;
+}
+.slick-dots li button:before,
+li.slick-active button:before {
+  color: transparent;
+  opacity: 1;
+}
+.slick-dots li button:before{
+  background-color: transparent;
+  border: 1px solid #8296ee;
+  border-radius: 50%;
+  display: inline-block;
+  height: 15px;
+  width: 15px;
 
+}
+.slick-dots  li.slick-active button:before {
+  background-color: #433a6c;
+}
 .auth-cont {
   display: flex;
   align-items: center;
@@ -439,7 +463,7 @@ body {
   position: relative;
   left: 20px;
   width: 20%;
-  height: 80%;
+  height: 70%;
   display: flex;
   align-items: center;
 }
@@ -452,8 +476,7 @@ body {
   color: #fff;
 }
 .search-icon {
-  position: absolute;
-  right: 5px;
+  margin-left: 25px;
   font-size: 14px;
   color: #9696ad;
   padding: 4px;
@@ -701,13 +724,16 @@ body {
   margin: 30px 0 30px 40px;
   width: 90%;
   height: 450px;
+  position: relative;
+  bottom: 20px;
   display: flex;
   justify-content: space-between;
 }
 .game-slides {
   height: 100%;
   width: 65%;
-  background-color: tomato;
+  display: flex;
+  flex-direction: column;
 }
 .g-fa-cont {
   display: flex;
@@ -715,6 +741,7 @@ body {
   justify-content: space-between;
   height: 100%;
   width: 33%;
+  margin-left: 28px;
 }
 .friends-wp {
   width: 100%;
@@ -782,7 +809,7 @@ body {
   color: #8c86c2;
 }
 .w-load-ach {
-  width: 285px;
+  width: 80%;
   height: 10px;
   background-color: #322a5a;
   margin-top: 10px;
