--- a/css/style.css
+++ b/css/style.css
@@ -425,7 +425,7 @@ li.slick-active button:before {
 .burger-icon-l{
   font-size: 30px;
   color: #944bd8;
-  display: none;
+  display: none !important;
 }
 .nav-ul {
   width: 40%;
@@ -924,6 +924,111 @@ li.slick-active button:before {
   height: 100%;
   border-radius: 12px;
 }
+.store-content{
+  width: 100%;
+  background-color: #241b3f;
+}
+.store-sec{
+  width: 100%;
+  position: relative;
+  display: flex;
+}
+.left-nav{
+  position: relative;
+  left: 0;
+  top: 0;
+  width: 200px;
+  border-right: 1px solid white;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+.ln-ul{
+  margin-top: 18px;
+  margin-left: 25px;
+  color: #fff;
+}
+.ln-li{
+  color: #ab9ee7;
+  margin-top: 10px;
+  transition-duration: 0.3s;
+  cursor: pointer;
+}
+.ln-li:hover{
+  color: #e3dcfd;
+}
+.ln-li-icons{
+  color: #5a15da;
+  background-color: #ab9ee7;
+  font-size: 12px;
+  padding: 3px;
+  border-radius: 3px;
+  margin-right: 5px;
+}
+.store-part{
+  position: relative;
+  width: 100%;
+  left: 0;
+  top: 0;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.store-nav{
+  position: relative;
+  display: flex;
+  align-items: center;
+  top: 50px;
+  width: 60%;
+  height: 30px;
+  border-radius: 8px;
+  background: linear-gradient(90deg,#452e5c, #310958);
+}
+.st-ul{
+  display: flex;
+  margin-left: 10px;
+  justify-content: space-between;
+}
+.st-li{
+  padding: 7px 12px;
+  cursor: pointer;
+  color: #cc93f1;
+  transition-duration: 0.5s;
+  border-radius: 10px;
+}
+.st-li:hover{
+  color: #b69fc6;
+  background: linear-gradient(90deg,#3f2855, #4d019900);
+}
+.search-st {
+  width: 150px;
+  height: 80%;
+  background-color: #373159;
+  border: 1px solid #534d7c;
+  border-radius: 5px;
+  color: #fff;
+  position: absolute;
+  right: 35px;
+  top: 2.5px;
+}
+.search-icon-st{
+  position: absolute;
+  right: 10px;
+  margin-left: 25px;
+  font-size: 14px;
+  color: #9696ad;
+  padding: 4px;
+  background-color: #7d789b88;
+  border-radius: 4px;
+  border: 1px solid #423d63;
+  cursor: pointer;
+  transition-duration: 1s;
+}
+.search-icon-st:hover {
+  background-color: #524886;
+}
+
 .footer {
   width: 100%;
   height: 7%;
@@ -934,6 +1039,9 @@ li.slick-active button:before {
   align-items: center;
   justify-content: center;
   position: relative;
+}
+.store-footer{
+  height: 40px;
 }
 .footer-icons {
   position: absolute;
@@ -1022,8 +1130,8 @@ li.slick-active button:before {
   .burger-icon{
     display: flex !important;
   }
-  .burger-icon-l {
-    display: flex;
+  .burger-icon-l{
+    display: flex !important;
   }
   .nav-icons{
     width: 250px;
