--- a/css/style.css
+++ b/css/style.css
@@ -1032,7 +1032,7 @@ li.slick-active button:before {
 }
 .st-li:hover{
   color: #b69fc6;
-  background: linear-gradient(90deg,#3f2855, #4d019900);
+  background: linear-gradient(90deg,#7139a5, #4d019900);
 }
 .search-st {
   width: 150px;
@@ -1060,6 +1060,84 @@ li.slick-active button:before {
 }
 .search-icon-st:hover {
   background-color: #524886;
+}
+.fet-rec-cont{
+  position: relative;
+  top: 120px;
+  right: 5%;
+  width: 80%;
+  height: 320px;
+  display: flex;
+  flex-direction: column;
+}
+.fet-rec-cont{
+  color: #fff;
+  font-size: 24px;
+}
+.fet-rec-slider{
+  width: 100%;
+} 
+.fr-slider-item{
+  width: 100%;
+  height: 100%;
+}
+.fr-row{
+  display: flex;
+}
+.slick-arrow{
+  right: 15px;
+}
+.fr-main-img{
+  height: 320px;
+  width: 70%;
+}
+.fr-main-img img{
+  width: 100%;
+  height: 100%;
+}
+.fr-info{
+  position: relative;
+  width: 25%;
+  background-color: #5c40fc67;
+  border-radius: 0 12px 12px 0;
+}
+.fr-info-imgs{
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+}
+.fr-info-imgs img{
+  width: 45%;
+  height: 80px;
+}
+.fr-info h2{
+  font-size: 26px;
+  margin-left: 10px;
+  margin-bottom: 10px;
+}
+.fr-info h3{
+  margin-top: 10px;
+  margin-bottom: 5px;
+  color: #fff;
+  font-size: 18px;
+  margin-left: 10px;
+}
+.fr-info h5{
+  font-size: 14px;
+  padding: 3px 10px;
+  background-color: #828494;
+  width: fit-content;
+  border-radius: 4px;
+  margin-left: 10px;
+}
+.fr-info p {
+  font-size: 15px;
+  color: #2b7519;
+  margin-left: 10px;
+  position: absolute;
+  bottom: 10px;
+  font-weight: bolder;
 }
 
 .footer {
