--- a/css/style.css
+++ b/css/style.css
@@ -996,7 +996,7 @@ body {
   display: flex;
   align-items: center;
   top: 50px;
-  width: 60%;
+  width: 500px;
   height: 30px;
   border-radius: 8px;
   background: linear-gradient(90deg,#452e5c, #310958);
@@ -1047,7 +1047,7 @@ body {
 .fet-rec-cont{
   position: relative;
   top: 120px;
-  right: 5%;
+  right: 7%;
   width: 80%;
   height: 320px;
   display: flex;
@@ -1057,6 +1057,9 @@ body {
 }
 .fet-rec-slider{
   width: 100%;
+  box-shadow: 0 0 18px 9px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0 0 18px 9px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0 0 18px 9px rgba(0,0,0,0.75);
 } 
 .fr-slider-item{
   width: 100%;
@@ -1155,7 +1158,7 @@ li.slick-active button:before {
 .special-offers{
   position: relative;
   top: 230px;
-  right: 5%;
+  right: 7%;
   width: 80%;
   height: 420px;
   display: flex;
@@ -1198,7 +1201,7 @@ li.slick-active button:before {
   position: absolute;
   bottom: 4px;
   right: 8px;
-  width: 30%;
+  width: 90px;
   height: 15%;
   background-color: #1d0f30;
   border-radius: 5px;
@@ -1222,14 +1225,48 @@ li.slick-active button:before {
   padding: 0 5px;
   display: flex;
   flex-direction: column;
-  align-items: flex-end;
   justify-content: center;
 }
 .old-p{
   font-size: 10px;
   text-decoration:line-through;
 }
-
+.new-p{
+  font-size: 14px;
+}
+.browse-store{
+  position: relative;
+  background-color: #39167a75;
+  width: 60%;
+  height: 50px;
+  right: 7%;
+  top: 300px;
+  box-shadow: 0 0 18px 9px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 0 0 18px 9px rgba(0,0,0,0.75);
+  -moz-box-shadow: 0 0 18px 9px rgba(0,0,0,0.75);
+  display: flex;
+  justify-content: space-between;
+  border-radius: 10px;
+}
+.browse-store p{
+  width: 23%;
+  height: 100%;
+  background: rgb(108,83,251);
+  background: linear-gradient(95deg, #6c53fb 0%, #46127e 100%);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 18px;
+  color: #cc8097;
+  transition-duration: 0.5s;
+  cursor: pointer;
+  border-radius: 8px;
+  font-weight: bolder;
+}
+.browse-store p:hover{
+  background: rgb(108,83,251);
+  background: linear-gradient(95deg, rgba(108,83,251,1) 0%, rgba(72,41,106,1) 100%);
+}
 .footer {
   width: 100%;
   height: 7%;
@@ -1342,6 +1379,16 @@ li.slick-active button:before {
   }
 
 }
+@media screen and (max-width: 900px) {
+  .left-nav{
+    position: absolute;
+    transform: translateX(-100%);
+  }
+  .fet-rec-cont,.special-offers{
+    width: 90%;
+    right: unset;
+  }
+}
 @media screen and (max-width: 800px) {
   .achievements{
     display: flex;
@@ -1350,6 +1397,9 @@ li.slick-active button:before {
   .ach-p-part{
     position: static;
     margin: 10px 0 10px 20px;
+  }
+  .browse-store p{
+    font-size: 14px;
   }
 }
 @media screen and (max-width: 700px) {
@@ -1362,6 +1412,12 @@ li.slick-active button:before {
   }
   .slider-for{
     height: unset;
+  }
+  .fr-info h2{
+    font-size: 15px;
+  }
+  .fr-info h3{
+    font-size: 13px;
   }
 }
 @media screen and (max-width: 600px) {
@@ -1393,6 +1449,30 @@ li.slick-active button:before {
   .game-nav{
     height: 40px;
   }
+  .fr-main-img{
+    height: 250px;
+  }
+  .fr-info p{
+    right: 2px;
+    font-size: 12px;
+    bottom: 12px;
+  }
+  .special-offers{
+    height: 320px;
+  }
+  .sf-item h6{
+    font-size: 14px;
+  }
+  .browse-store p{
+    font-size: 12px;
+  }
+  .browse-store{
+    height: 35px;
+    width: 300px;
+  }
+  .fr-info-imgs img{
+    height: 70px;
+  }
 }
 @media screen and (max-width: 500px) {
   .auth-cont{
@@ -1423,6 +1503,38 @@ li.slick-active button:before {
   .friends-wp{
     height: 180px;
   }
+  .store-nav{
+    width: 90%;
+  }
+  .st-li{
+    font-size: 10px;
+  }
+  .search-st{
+    width: 80px;
+  }
+  .fr-info h3{
+    margin-top: 2px;
+  }
+  .fr-info-imgs img{
+    height: 60px;
+  }
+  .sf-prices{
+    width: 60px;
+    bottom: 1px;
+  }
+  .sf-percent{
+    font-size: 12px;
+    padding: 0 2px;
+  }
+  .new-p{
+    font-size: 9px;
+  }
+  .old-p{
+    font-size: 7px;
+  }
+  .browse-store{
+    left: 5%;
+  }
 }
 @media screen and (max-width: 400px) {
   .gn-li{
@@ -1436,5 +1548,20 @@ li.slick-active button:before {
   }
   .play-button{
     padding: 7px 25px; 
+  }
+  .fr-info-imgs img{
+    height: 50px;
+  }
+  .st-li{
+    padding: 3px 9px;
+  }
+  .search-st{
+    width: 50px;
+  }
+  .browse-store{
+    left: 2%;
+  }
+  .sf-item h6{
+    font-size: 13px;
   }
 }
