--- a/css/style.css
+++ b/css/style.css
@@ -161,14 +161,19 @@ body {
 .slider-game-info{
   position: absolute;
   z-index: 2;
-  width: 400px;
+  width: 100%;
   height: 250px;
+  display: flex;
+  justify-content: center;
+  top: 20%;
+}
+.slider-game-cont{
   background-color: #9471d6c2;
   border-radius: 8px;
+  width: 400px;
+  height: 100%;
   display: flex;
-  top: 20%;
-  left: 30%;
-  border-radius: 12px;
+  flex-direction: row;
 }
 .price-store{
   margin-left: 15px;
@@ -417,6 +422,7 @@ body {
   width: 99.8vw;
   background-color: #241b3f;
   border-radius: 10px 10px 0 0;
+  overflow-y: hidden;
 }
 
 .header {
@@ -768,6 +774,7 @@ body {
   right: 10px;
   top: 10px;
   border-radius: 8px;
+  cursor: pointer;
   display: none;
 
 }
@@ -953,7 +960,6 @@ body {
   position: relative;
   left: 0;
   top: 0;
-  width: 200px;
   border-right: 1px solid white;
   height: 100%;
   display: flex;
@@ -961,10 +967,13 @@ body {
 }
 .ln-ul{
   margin-top: 18px;
-  margin-left: 25px;
+  margin-left: 10px;
+  margin-right: 5px;
   color: #fff;
+  width: 140px;
 }
 .ln-li{
+  font-size: 14px;
   color: #ab9ee7;
   margin-top: 10px;
   transition-duration: 0.3s;
@@ -976,8 +985,8 @@ body {
 .ln-li-icons{
   color: #5a15da;
   background-color: #ab9ee7;
-  font-size: 12px;
-  padding: 3px;
+  font-size: 10px;
+  padding: 2px;
   border-radius: 3px;
   margin-right: 5px;
 }
@@ -1535,6 +1544,25 @@ li.slick-active button:before {
   .browse-store{
     left: 5%;
   }
+  .slider-game-cont{
+    width: 100%;
+  }
+  .price-store{
+    transform: translateX(-120%);
+  }
+  .slider-gi-name{
+    font-size: 16px;
+    white-space: normal;
+  }
+  .rd{
+    margin-top: 35px;
+  }
+  .slider-game-info p{
+    font-size: 12px;
+  }
+  .game-genre span{
+    font-size: 14px;
+  }
 }
 @media screen and (max-width: 400px) {
   .gn-li{
@@ -1563,5 +1591,8 @@ li.slick-active button:before {
   }
   .sf-item h6{
     font-size: 13px;
+  }
+  .game-nav{
+    height: 30px;
   }
 }
