--- a/css/style.css
+++ b/css/style.css
@@ -420,7 +420,7 @@ body {
   position: relative;
   height: 99.8vh;
   width: 99.8vw;
-  background-color: #241b3f;
+  background-color: #271d42;
   border-radius: 10px 10px 0 0;
   overflow-y: hidden;
 }
