--- a/css/style.css
+++ b/css/style.css
@@ -307,10 +307,12 @@ body {
 .slider-for{
   width: 100%;
   height: 70%;
+
 }
 .slider-nav{
   width: 100%;
   height: 30%;
+  border: 2px solid #050982;
 }
 .slider-nav-item img{
   width: 100%;
